--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,8 @@ services:
 before_script:
   - cp config/database.example.json config/database.json
   - psql -c 'create database api_test;' -U postgres
-  - npm run migrate
+  - yarn run migrate
+script:
+  - yarn run coverage
 after_success:
-  - npm run coverage
   - cat ./coverage/lcov.info | coveralls
