--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Example Hapi application demonstrating usage of hapi-auth-token plugin for authentication with DB users",
   "scripts": {
     "test": "NODE_ENV=test mocha --exit --require babel-core/register --require babel-polyfill test/**/*.test.js",
-    "coverage": "nyc --reporter=text --reporter=lcov npm run test",
+    "coverage": "nyc --reporter=text --reporter=lcov yarn test",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
     "start": "PORT=3000 node -r babel-core/register -r babel-polyfill bin/www",
@@ -13,36 +13,35 @@
     "seed": "yarn run sequelize db:seed:all"
   },
   "dependencies": {
-    "bcrypt": "^1.0.3",
-    "blipp": "^3.0.0",
-    "boom": "^7.2.0",
-    "hapi": "^17.2.2",
-    "hapi-auth-token": "^2.0.0",
-    "hapi-swagger": "^9.1.1",
-    "inert": "^5.1.0",
-    "joi": "^13.1.2",
-    "pg": "^7.4.1",
-    "pg-hstore": "^2.3.2",
-    "sequelize": "^4.35.2",
-    "vision": "^5.3.2"
+    "bcrypt": "^5.1.1",
+    "blipp": "^4.0.2",
+    "boom": "^7.3.0",
+    "@hapi/hapi": "^20.2.2",
+    "hapi-auth-token": "^3.0.0",
+    "hapi-swagger": "^14.5.5",
+    "@hapi/inert": "^6.0.5",
+    "joi": "^17.9.2",
+    "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.32.1",
+    "@hapi/vision": "^6.1.0"
   },
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "chai": "^4.1.2",
-    "coveralls": "^3.0.0",
-    "dotenv": "^4.0.0",
-    "eslint": "^4.15.0",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-mocha": "^4.11.0",
-    "mocha": "^5.0.0",
-    "npm": "^5.6.0",
-    "nyc": "^11.6.0",
-    "sequelize-cli": "^4.0.0",
-    "sinon": "^4.1.6",
-    "sinon-chai": "^2.14.0"
+    "babel-preset-env": "^1.7.0",
+    "chai": "^4.3.7",
+    "coveralls": "^3.1.1",
+    "dotenv": "^16.3.1",
+    "eslint": "^8.45.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-mocha": "^10.1.0",
+    "mocha": "^10.2.0",
+    "nyc": "^15.1.0",
+    "sequelize-cli": "^6.6.1",
+    "sinon": "^15.2.0",
+    "sinon-chai": "^3.7.0"
   }
 }
